tests/baselines/reference/parserVariableDeclaration8.errors.txt
==== tests/cases/compiler/parserVariableDeclaration8.ts (1 errors) ====
    var ;
    ~~~
!!! parserVariableDeclaration8.ts(1,1): error TS1097: 'variable declaration' list cannot be empty.